--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -12,6 +12,10 @@ body {
 
 .page {
   overflow: hidden;
+
+  @media (max-width: $breakpoint-sm) {
+    padding-top: calc(58px + env(safe-area-inset-top, 0px));
+  }
 }
 
 .container {
