--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 20;
+  z-index: 1000;
   width: 100%;
   max-width: 100vw;
   padding-top: env(safe-area-inset-top, 0px);
